--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "chartist": "^0.11.0",
     "core-js": "^2.6.11",
     "register-service-worker": "^1.5.2",
+    "universal-cookie": "^3.1.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0",
-    "universal-cookie": "^3.1.0"
+    "vue-slick-carousel": "^1.0.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
