--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "universal-cookie": "^3.1.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.6.6",
+    "vue-froala-wysiwyg": "^3.2.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.2",
     "vue-slick-carousel": "^1.0.6",
