--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "vue-light-bootstrap-dashboard",
+  "name": "ESports Summit",
   "version": "2.0.0",
   "private": true,
-  "description": "Vue light bootstrap dashboard",
-  "author": "cristijora <joracristi@gmail.com>",
+  "description": "ESports Summit",
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
