fix some styles

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ESports Summit",
+  "name": "esports-summit",
   "version": "2.0.0",
   "private": true,
   "description": "ESports Summit",
