--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-pell-editor": "^2.0.1",
     "vue-router": "^3.0.2",
     "vue-slick-carousel": "^1.0.6",
+    "vue-star-rating": "^1.6.1",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
