--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gamers Lounge",
-  "short_name": "Gamers Lounge",
+  "name": "Gamers Lounge Business",
+  "short_name": "Gamers Lounge Business",
   "icons": [
     {
       "src": "./favicon.png",
