add graphql queries and mutations with their helper functions

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VUE_APP_API = "https://esportssummit-me.com/webservice/api"
+VUE_APP_API = "https://staging-gamers-lounge-business.herokuapp.com/graphql"
