--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VUE_APP_API = "https://esportssummit-me.com/webservice-staging/api"
+VUE_APP_API = "https://staging-gamers-lounge-business.herokuapp.com/graphql"
