--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "universal-cookie": "^3.1.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.6.6",
+    "vue-carousel-3d": "^1.0.1",
     "vue-multiselect": "^2.1.6",
     "vue-pell-editor": "^2.0.1",
     "vue-router": "^3.0.2",
