--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.6",
     "vue-carousel-3d": "^1.0.1",
     "vue-count-to": "^1.0.13",
+    "vue-intersect": "^1.1.6",
     "vue-multiselect": "^2.1.6",
     "vue-pell-editor": "^2.0.1",
     "vue-router": "^3.0.2",
