--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#2af3f3"
+  "theme_color": "#598cc2"
 }
