--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "e2e": "node test/e2e/runner.js",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve --open",
-    "lint-fix": "vue-cli-service lint --fix"
+    "lint-fix": "vue-cli-service lint --fix",
+    "postbuild": "rsync -a --delete dist/* ../../public_html"
   },
   "dependencies": {
     "axios": "^0.21.1",
