--- a/.github/workflows/app-auto-build.yml
+++ b/.github/workflows/app-auto-build.yml
@@ -6,6 +6,7 @@ name: Build Gamers Lounge Website
 jobs:
   gl-build:
     name: Gamers Lounge Website Build
+    runs-on: ubuntu-latest
     steps:
       - name: Install Dependencies
         run: npm i
