--- a/.github/workflows/app-auto-build.yml
+++ b/.github/workflows/app-auto-build.yml
@@ -7,11 +7,11 @@ jobs:
   gl-build:
     name: Gamers Lounge Website Build
     runs-on: ubuntu-latest
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '12'
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "12"
       - name: Install Dependencies
         run: npm i
       - name: Build
